; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_usimple_lock_try.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_usimple_lock_try.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@pc = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usimple_lock_try(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load i32, i32* @pc, align 4
  %5 = call i32 @DECL_PC(i32 %4)
  %6 = load i32, i32* @pc, align 4
  %7 = call i32 @OBTAIN_PC(i32 %6)
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %9 = load i32, i32* @pc, align 4
  %10 = call i32 @usld_lock_try_pre(%struct.TYPE_5__* %8, i32 %9)
  %11 = call i32 @USLDBG(i32 %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = call i32 @hw_lock_try(i32* %13)
  store i32 %14, i32* %3, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %1
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %18 = load i32, i32* @pc, align 4
  %19 = call i32 @usld_lock_try_post(%struct.TYPE_5__* %17, i32 %18)
  %20 = call i32 @USLDBG(i32 %19)
  br label %21

21:                                               ; preds = %16, %1
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @DECL_PC(i32) #1

declare dso_local i32 @OBTAIN_PC(i32) #1

declare dso_local i32 @USLDBG(i32) #1

declare dso_local i32 @usld_lock_try_pre(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @hw_lock_try(i32*) #1

declare dso_local i32 @usld_lock_try_post(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
